# Personal-Finance-Analyzer

./: .gitignore  README.md  progress_log.md  project_map.md  roadmap.md  system_prompt.md  tech_stack.md
.adnify/: workspace-state.json  workspace.json
.adnify/sessions/: 9a1271cf-25cd-419a-a51a-ae6e50da1cda.json  9a1271cf-25cd-419a-a51a-ae6e50da1cda.jsonl  _meta.json
.github/workflows/: ci.yml
backend/api/: .env.example  README.md  alembic.ini  pyproject.toml
backend/api/alembic/: env.py
backend/api/alembic/versions/: 8ae8dfe4de39_extend_receipt_upload_metadata.py  c9702a06526e_create_initial_schema.py  f2a1bb149083_add_user_profile_defaults.py
backend/api/app/: main.py
backend/api/app/api/: health.py
backend/api/app/api/v1/: auth.py  categories.py  dashboard.py  receipts.py  transactions.py
backend/api/app/core/: config.py  database.py  logging.py  security.py
backend/api/app/dependencies/: auth.py
backend/api/app/integrations/ocr/: __init__.py  base.py  factory.py  mock.py
backend/api/app/integrations/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/api/app/middleware/: request_context.py  request_id.py
backend/api/app/models/: __init__.py  entities.py
backend/api/app/schemas/: __init__.py  auth.py  categories.py  dashboard.py  health.py  receipts.py  transactions.py
backend/api/app/services/: analytics.py  category_suggestion.py  date_ranges.py  draft_review.py  health_checks.py  ocr_pipeline.py  ocr_queue.py  password_service.py  receipt_validation.py
backend/api/scripts/: seed_categories.py
backend/api/tests/: conftest.py  test_analytics_service.py  test_auth_flow.py  test_auth_login.py  test_auth_logout.py  test_auth_me.py  test_auth_register.py  test_categories_api.py  test_config_validation.py  test_dashboard_api.py  test_date_ranges.py  test_health.py  test_health_endpoints.py  test_password_service.py  test_receipts_api.py  test_receipts_draft.py  test_security.py  test_storage.py  test_transactions_api.py  test_transactions_update_delete.py
backend/shared/: README.md  pyproject.toml
backend/shared/pfa_shared/: __init__.py  config.py  entities.py  enums.py  logging.py  schemas.py  utils.py
backend/shared/pfa_shared/storage/: __init__.py  base.py  factory.py  local.py  s3.py
backend/worker/: .env.example  README.md  ocr_provider.py  pyproject.toml  pyrightconfig.json  run_ping.py  tasks.py  worker_app.py
backend/worker/tests/: test_ocr_provider.py  test_ping_task.py  test_run_ocr_for_receipt.py
docs/: erd.puml  goal.md
docs/PRD/: BA_Spec.md
frontend/web/: .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/web/app/: globals.css  layout.tsx  page.tsx
frontend/web/app/dashboard/: category-chart.tsx  dashboard-client.tsx  page.tsx
frontend/web/app/health/: page.tsx
frontend/web/app/login/: page.tsx
frontend/web/app/receipts/[id]/review/: page.tsx
frontend/web/app/receipts/upload/: page.tsx
frontend/web/app/register/: page.tsx
frontend/web/app/transactions/: page.tsx  transaction-history-client.tsx
frontend/web/app/transactions/new/: page.tsx
frontend/web/e2e/: README.md  auth.spec.ts  dashboard.spec.ts  helpers.ts  manual-entry.spec.ts  receipt-review.spec.ts  transactions-history.spec.ts
frontend/web/lib/: auth-api.ts  categories-api.ts  config.ts  dashboard-api.ts  receipts-api.ts  transactions-api.ts
infra/docker/: docker-compose.yml
infra/docker/scripts/: minio-init.sh
tasks/: phase-0-foundation.md  phase-1-auth.md  phase-2-receipts-ocr.md  phase-3-transactions.md  phase-4-dashboard-analytics.md  phase-5-budgets.md  phase-6-ai-insights.md  phase-7-hardening-uat-release.md  phase-8-post-mvp.md
