[project]
name = "personal-finance-analyzer-api"
version = "0.1.0"
description = "FastAPI backend for Personal Finance Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "personal-finance-analyzer-shared",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.uv.sources]
personal-finance-analyzer-shared = { path = "../shared" }
