[project]
name = "personal-finance-analyzer-api"
version = "0.1.0"
description = "FastAPI backend for Personal Finance Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0,<2.0.0",
  "email-validator>=2.2.0,<3.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "pyjwt>=2.9.0,<3.0.0",
  "pwdlib[argon2]>=0.2.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "taskiq>=0.11.0,<1.0.0",
  "taskiq-redis>=1.0.0,<2.0.0",
  "personal-finance-analyzer-shared",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlmodel>=0.0.22,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true
plugins = []

[[tool.mypy.overrides]]
module = ["taskiq_redis.*", "taskiq.*", "pfa_shared.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = false

[tool.uv.sources]
personal-finance-analyzer-shared = { path = "../shared" }
