[project]
name = "personal-finance-analyzer-shared"
version = "0.1.0"
description = "Shared Python package for Personal Finance Analyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.9.0,<3.0.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pfa_shared"]
